# lazy-locker

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  test.txt
.github/: copilot-instructions.md
.github/agents/: doc-agent.md  lint-agent.md  sec-agent.md  test-agent.md  tui-agent.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  README.md
docs/: README.md  architecture.md  cli-reference.md  getting-started.md  sdk-guide.md  security.md
examples/: package-lock.json  package.json  test_env.py  test_env.ts
scripts/: bump-version.sh  pre-commit.sh  release.sh  setup-dev.sh
sdk/javascript/: README.md  package.json  tsconfig.json
sdk/javascript/src/: config.ts  index.ts
src/: app.rs  event.rs  lib.rs  main.rs  tui.rs  ui.rs
src/core/: agent.rs  cli.rs  config.rs  crypto.rs  executor.rs  init.rs  mod.rs  store.rs
tests/: integration.rs
